--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <p class="action-text">Подпишитесь на рассылку</p>
             <label for="mail" class="subscribe-label">E-mail</label>
             <input type="mail" name="mail" id="mail" class="subscribe-input" />
-            <button class="submit-btn" type="submit">
+            <button class="tertiary-btn" type="submit">
               Подписаться<svg class="send-icon" width="24" height="24">
                 <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
@@ -510,7 +510,7 @@
             <label class="form-label" for="mail">Почта</label>
             <input class="form-input" type="mail" name="mail" id="mail" />
           </div>
-          <div class="form-field">
+          <div class="comment-field">
             <label class="form-label" for="comment">Комментарий</label>
             <textarea
               class="textaria"
@@ -531,7 +531,9 @@
               <span><a href="">Условия договора</a></span></label
             >
           </div>
-          <button class="submit-btn modal" type="submit">Отправить</button>
+          <button class="tertiary-btn submit-btn" type="submit">
+            Отправить
+          </button>
         </form>
       </div>
     </div>
