--- a/portfolio.html
+++ b/portfolio.html
@@ -355,7 +355,7 @@
         </div>
 
         <div class="join-us">
-          <p class="join-us-text">присоединяйтесь</p>
+          <p class="action-text">присоединяйтесь</p>
           <ul class="join-us-list">
             <li class="join-us-item">
               <a href="" class="join-us-link"
@@ -384,6 +384,27 @@
               ></a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <form>
+            <p class="action-text">Подпишитесь на рассылку</p>
+            <div class="subscribe">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="subscribe-input"
+                placeholder="mail@gmail.com"
+              />
+              <label for="email" class="subscribe-label">E-mail</label>
+
+              <button class="primary-button" type="submit">
+                Подписаться<svg class="send-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
