--- a/index.html
+++ b/index.html
@@ -473,16 +473,25 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe">
-          <form action="Subscribe">
+        <div class="footer-form">
+          <form>
             <p class="action-text">Подпишитесь на рассылку</p>
-            <label for="mail" class="subscribe-label">E-mail</label>
-            <input type="mail" name="mail" id="mail" class="subscribe-input" />
-            <button class="tertiary-btn" type="submit">
-              Подписаться<svg class="send-icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-send"></use>
-              </svg>
-            </button>
+            <div class="subscribe">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="subscribe-input"
+                placeholder="mail@gmail.com"
+              />
+              <label for="email" class="subscribe-label">E-mail</label>
+
+              <button class="primary-button" type="submit">
+                Подписаться<svg class="send-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
@@ -496,44 +505,60 @@
           </svg>
         </button>
         <!--Форма-->
-        <form class="form" action="">
+        <form class="form">
           <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
           <div class="form-field">
             <label class="form-label" for="name">Имя</label>
-            <input class="form-input" type="text" name="name" id="name" />
+            <input class="form-input" type="text" name="name" id="name" /><svg
+              class="form-icon"
+              width="18"
+              height="18"
+            >
+              <use href="./images/symbol-defs.svg#icon-person"></use>
+            </svg>
           </div>
           <div class="form-field">
             <label class="form-label" for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" />
+            <input class="form-input" type="tel" name="tel" id="tel" /><svg
+              class="form-icon"
+              width="18"
+              height="18"
+            >
+              <use href="./images/symbol-defs.svg#icon-phone"></use>
+            </svg>
           </div>
           <div class="form-field">
             <label class="form-label" for="mail">Почта</label>
-            <input class="form-input" type="mail" name="mail" id="mail" />
+            <input class="form-input" type="email" name="email" id="mail" /><svg
+              class="form-icon"
+              width="18"
+              height="18"
+            >
+              <use href="./images/symbol-defs.svg#icon-email"></use>
+            </svg>
           </div>
           <div class="comment-field">
             <label class="form-label" for="comment">Комментарий</label>
             <textarea
-              class="textaria"
+              class="textarea"
               name="comment"
               id="comment"
               placeholder="Введите текст"
             ></textarea>
           </div>
           <div class="checkbox">
-            <input
-              type="checkbox"
-              class="checkbox-input"
-              name="policy"
-              id="policy"
-            />
-            <label for="policy" class="policy-text"
-              >Соглашаюсь с рассылкой и принимаю
+            <label class="checkbox-label"
+              ><input
+                type="checkbox"
+                class="checkbox-input"
+                name="agreement"
+                value="agreement"
+              /><span class="checkbox-icon"></span>
+              Соглашаюсь с рассылкой и принимаю
               <span><a href="">Условия договора</a></span></label
             >
           </div>
-          <button class="tertiary-btn submit-btn" type="submit">
-            Отправить
-          </button>
+          <button class="primary-button" type="submit">Отправить</button>
         </form>
       </div>
     </div>
