--- a/index.html
+++ b/index.html
@@ -473,25 +473,20 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form>
-            <p class="action-text">Подпишитесь на рассылку</p>
-            <div class="subscribe">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="subscribe-input"
-                placeholder="mail@gmail.com"
-              />
-              <label for="email" class="subscribe-label">E-mail</label>
-
-              <button class="primary-button" type="submit">
-                Подписаться<svg class="send-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+        <div class="subscribe">
+          <p class="action-text">Подпишитесь на рассылку</p>
+          <form class="footer-form">
+            <input
+              type="email"
+              name="email"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button class="primary-button" type="submit">
+              Подписаться<svg class="send-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -504,38 +499,44 @@
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
-        <!--Форма-->
+        <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
         <form class="form">
-          <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
           <div class="form-field">
             <label class="form-label" for="name">Имя</label>
-            <input class="form-input" type="text" name="name" id="name" /><svg
-              class="form-icon"
-              width="18"
-              height="18"
-            >
-              <use href="./images/symbol-defs.svg#icon-person"></use>
-            </svg>
+            <div class="form-input-wrapper">
+              <input class="form-input" type="text" name="name" id="name" /><svg
+                class="form-icon"
+                width="18"
+                height="18"
+              >
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label class="form-label" for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" /><svg
-              class="form-icon"
-              width="18"
-              height="18"
-            >
-              <use href="./images/symbol-defs.svg#icon-phone"></use>
-            </svg>
+            <div class="form-input-wrapper">
+              <input class="form-input" type="tel" name="tel" id="tel" /><svg
+                class="form-icon"
+                width="18"
+                height="18"
+              >
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label class="form-label" for="mail">Почта</label>
-            <input class="form-input" type="email" name="email" id="mail" /><svg
-              class="form-icon"
-              width="18"
-              height="18"
-            >
-              <use href="./images/symbol-defs.svg#icon-email"></use>
-            </svg>
+            <div class="form-input-wrapper">
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                id="mail"
+              /><svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="comment-field">
             <label class="form-label" for="comment">Комментарий</label>
@@ -554,9 +555,8 @@
                 name="agreement"
                 value="agreement"
               /><span class="checkbox-icon"></span>
-              Соглашаюсь с рассылкой и принимаю
-              <span><a href="">Условия договора</a></span></label
-            >
+              Соглашаюсь с рассылкой и принимаю </label
+            ><a class="conditions" href="">Условия договора</a>
           </div>
           <button class="primary-button" type="submit">Отправить</button>
         </form>
