--- a/portfolio.html
+++ b/portfolio.html
@@ -386,24 +386,19 @@
           </ul>
         </div>
         <div class="footer-form">
+          <p class="action-text">Подпишитесь на рассылку</p>
           <form>
-            <p class="action-text">Подпишитесь на рассылку</p>
-            <div class="subscribe">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="subscribe-input"
-                placeholder="mail@gmail.com"
-              />
-              <label for="email" class="subscribe-label">E-mail</label>
-
-              <button class="primary-button" type="submit">
-                Подписаться<svg class="send-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <input
+              type="email"
+              name="email"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button class="primary-button" type="submit">
+              Подписаться<svg class="send-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
